testsuite/tests/properties/invalid_n_propgate/valid_3.lkt
import common

class BarNode: FooNode {
    @ignored fun main_prop(): Equation =
        node.ref_var <- BazNode.prop3%(
            node.type_var,
            node.type_var,
            node.type_var
        )
}
